--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
 	"name": "pk237lpdp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css",
-    "start": "npm run build",
-    "hotreload": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.4"
-  }
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css",
+		"start": "npm run build",
+		"hotreload": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+	},
+	"devDependencies": {
+		"prettier": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.5",
+		"tailwindcss": "^3.4.4"
+	}
 }
